Show movie rating with handlebars

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -18,12 +18,13 @@
  
         <div class="flip flip-vertical">
         </div>
-
+        {{else}}
+<div class="no-posts">
+             <p class="no-offer">There are no posts yet...</p>
+        </div>
         {{/each}}
 
-        <!-- If there are still no posts in the database display: -->
-        <!-- <div class="no-posts">
-                        <p class="no-offer">There are no posts yet...</p>
-                    </div> -->
+        
+         
     </div>
 </section>
