--- a/src/views/search.hbs
+++ b/src/views/search.hbs
@@ -1,32 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Search Page</title>
-    <!-- Do not forget to change the path to the css file -->
-    <link href="./static/css/style.css" type="text/css" rel="stylesheet">
-</head>
-
-<body>
-
-    <div id="box">
-
-        <nav>
-            <img src="./static/img/logo.webp" alt="logo">
-
-            <ul class="menu">
-                <li><a href="/">Home</a></li>
-                <li><a href="/create">Create Post</a></li>
-                <li><a href="/search">Search</a></li>
-                <li><a href="/about">About</a></li>
-            </ul>
-
-        </nav>
-
-
-        <main>
-
             <section id="search">
                 <h1>Search</h1>
                 <form action="" method="" class="form">
@@ -43,7 +14,7 @@
                     <!-- If there are posts for movie in the database display each of them -->
                     <div class="flip flip-vertical">
                         <div class="front">
-                            <img src="./static/img/jungle-cruise.jpeg"
+                            <img src="/static/img/jungle-cruise.jpeg"
                                 alt="Jungle-Couise">
                         </div>
                         <div class="back">
@@ -64,7 +35,7 @@
 
                     <div class="flip flip-vertical">
                         <div class="front">
-                            <img src="./static/img/the-little-mermaid.jpg"
+                            <img src="/static/img/the-little-mermaid.jpg"
                                 alt="The-Little-Mermaid">
                         </div>
                         <div class="back">
@@ -81,7 +52,7 @@
 
                     <div class="flip flip-vertical">
                         <div class="front">
-                            <img src="./static/img/home-alone.jpeg"
+                            <img src="/static/img/home-alone.jpeg"
                                 alt="Home-Alone">
                         </div>
                         <div class="back">
@@ -107,16 +78,4 @@
                         <p class="no-offer">There are no movies matched...</p>
                     </div> -->
                 </div>
-            </section>
-
-        </main>
-
-
-        <footer>
-            © JS Back-End Workshop
-        </footer>
-    </div>
-
-</body>
-
-</html>
+        </section>
