--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -2,16 +2,13 @@
     <h1>All Movies</h1>
     <div class="band">
 
-        <!-- If there are posts for creature in the database display each of them -->
         {{#each movies}}
-             {{>movie}}
+            {{>movie}}
         {{else}}
-<div class="no-posts">
-             <p class="no-offer">There are no posts yet...</p>
-        </div>
-        {{/each}}
+            <div class="no-posts">
+                <p class="no-offer">There are no movies matched...</p>
+            </div>
+        {{/each}}     
 
-        
-         
     </div>
 </section>
