--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,40 +1,41 @@
-<!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Catalog Page</title>
     <!-- Do not forget to change the path to the css file -->
-    <link href="/static/css/style.css" type="text/css" rel="stylesheet">
-</head>
+    <link href="/static/css/style.css" type="text/css" rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
 
     <div id="box">
 
-        <nav>
-            <img src="/static/img/logo.webp" alt="logo">
+      <nav>
+        <img
+          src="https://cdn.pixabay.com/photo/2013/07/13/13/36/film-161204_1280.png"
+          alt="logo"
+        />
 
-            <ul class="menu">
-                <li><a href="/">Home</a></li>
-                <li><a href="/movies/create">Create Post</a></li>
-                <li><a href="/movies/search">Search</a></li>
-                <li><a href="/about">About</a></li>
-            </ul>
+        <ul class="menu">
+          <li><a href="/">Home</a></li>
+          <li><a href="/movies/create">Create Movie</a></li>
+          <li><a href="/casts/create">Create Cast</a></li>
+          <li><a href="/movies/search">Search</a></li>
+          <li><a href="/about">About</a></li>
+        </ul>
 
-        </nav>
+      </nav>
 
+      <main>
+        {{{body}}}
+      </main>
 
-        <main>
-            {{{body}}}   
-        </main>
-        
-        
-        <footer>
-            © JS Back-End Workshop
-        </footer>
+      <footer>
+        © JS Back-End Workshop
+      </footer>
     </div>
 
-</body>
+  </body>
 
 </html>
