Add attach cast page

--- a/src/views/movie/details.hbs
+++ b/src/views/movie/details.hbs
@@ -22,9 +22,12 @@
 
         <p class="disc">Description: {{movie.description}}</p>
         <p class="card-category">Category: {{movie.category}}</p>
+        
+        
         <div style="display: flex; justify-content:center">
-          <a href="/movies/attach-cast" class="details">Attach</a>
+          <a href="/movies/{{movie.id}}/attach-cast" class="details">Attach</a>
         </div>
+
 
       </div>
     </div>
