--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -18,11 +18,17 @@
         />
 
         <ul class="menu">
+          {{!--All--}}
           <li><a href="/">Home</a></li>
-          <li><a href="/movies/create">Create Movie</a></li>
-          <li><a href="/casts/create">Create Cast</a></li>
           <li><a href="/movies/search">Search</a></li>
           <li><a href="/about">About</a></li>
+          {{!--Users--}}
+          <li><a href="/movies/create">Create Movie</a></li>
+          <li><a href="/casts/create">Create Cast</a></li>
+          <li><a href="#">Logout</a></li>
+          {{!--Guests--}}
+          <li><a href="#">Login</a></li>
+          <li><a href="#">Register</a></li>
         </ul>
 
       </nav>
