--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -28,7 +28,7 @@
           <li><a href="#">Logout</a></li>
           {{!--Guests--}}
           <li><a href="#">Login</a></li>
-          <li><a href="#">Register</a></li>
+          <li><a href="/auth/register">Register</a></li>
         </ul>
 
       </nav>
